# maori-sre

./: .agent-prediction-ledger.json  .agent-state-hash  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  LICENSING.md  README.md  SRE-White-Paper-v1.0.txt  WHITEPAPER.md  WHY.md  afrikaans-to-moderate.txt  deploy-river-world.ps1  language-representation-spec-v0.1.md  literature-review-template.csv  pyproject.toml  review-notes.md  roadmap.md  session-summary.txt
architecture/: SYSTEM.md  components.json  demo-player.html  demo-script.md  experiments.json  flows.json  one-page-summary.md  review-scope.md  structures.json
content-plans/: course-format.md  curriculum-graph-wife.yaml  learner-profile-wife.yaml  pass1-results.json  visit-aotearoa-12-experiences.md  visit-aotearoa-course-v2.yaml  visit-aotearoa-course.yaml  visit-aotearoa-pass1-form.html  visit-aotearoa-pass1-worksheet.md  visit-course.schema.json
core/: MANIFEST.json  __init__.py  sre-domain-contracts-v0.1.md
docs/: app.js  audio.js  audio_index.js  contributions.js  curriculum-river.js  curriculum-wife.js  experiences.js  index.html  manifest.json  surface_forms.js  sw.js  voice_packages.js
experiences/: experience-format.md
research/: bibliography.bib
scripts/: acquisition-planner.js  add_provenance.py  build_app.py  debug-prior-coverage.js  download_teaka_audio.py  evaluate-acquisition-loop.js  find-word-ids.js  generate_wife_yamls.py  rebuild_js.py  rename_refs.py  story-gap-analysis.js  teaka_results.json  update_yaml_audio.py  verify_refs.py  verify_words_vs_teaka.py  (+2 more)
(+378 files in other folders)
