[project]
name = "sre-core"
version = "0.1.0"
description = "Semantic Representation Engine — Compiler for structured semantic knowledge"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
sre = "compiler.cli:main"

[tool.pytest.ini_options]
testpaths = ["core/tests"]
